--- a/frontend/app/main/navigation/navigation.component.scss
+++ b/frontend/app/main/navigation/navigation.component.scss
@@ -16,4 +16,50 @@
     overflow: hidden;
     z-index: $navigation-z-index;
 
+    ul {
+        color: #cbddcb;
+        list-style-type : none;
+        padding-left: 0px;
+
+           
+        li{
+            height: 36px;
+            width:$navigation-width;
+            margin:0;
+            display : block;
+
+            background-color: #054405;
+             
+            a:hover{
+                background-color: rgb(25, 102, 25);
+            }
+            a:active{
+                color: #0d3241;
+                font-weight: 600;
+                background-color: rgb(154, 207, 231);
+            }
+            a{
+                width:100%;
+                height:100%;
+                display : inline-block;
+                vertical-align: middle;
+
+                color: #cbddcb;
+                font-size : 0.9em;
+                font-weight: 400;
+                overflow-x: hidden;
+                overflow-y: hidden;
+                text-indent: 4px;
+
+                text-decoration: none !important;
+
+                span{
+                    width:100%;
+                    height:100%;
+                    padding : 4px;
+                    display:block;
+                }
+            }
+        }
+    }
 }
