--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+// @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
+// @import "font-awesome/scss/fontawesome.scss";
