npm install bcryptjs, mongoose / user api 추가

--- a/frontend/app/main/header/header.component.scss
+++ b/frontend/app/main/header/header.component.scss
@@ -1,6 +1,6 @@
 @import "../main/main.component.scss";
 .main-header {
-    position: absolute;
+    position: fixed;
     //top : $header-height;
     z-index: $header-z-index;
     
