--- a/frontend/app/main/register-merchant/register-merchant.component.html
+++ b/frontend/app/main/register-merchant/register-merchant.component.html
@@ -1,1 +1,11 @@
-<p>register-merchant works!</p>
+<h1>Add Merchant</h1>
+
+<p>
+    <input type="text" placeholder="name" />
+</p>
+<p>
+    <input type="text" placeholder="merchant no" />
+</p>
+<p>
+    <input type="text" placeholder="phone no" />
+</p>
