--- a/frontend/app/start-page/start-page.component.html
+++ b/frontend/app/start-page/start-page.component.html
@@ -1,5 +1,12 @@
-<div class="root">
-    <h1> Splash Page </h1>
-    <p> Click this button to go homepage </p>
-    <button (click)="click_button()">Go</button>
+<div class="root">    
+    <div class="login">
+        <h1>Login</h1>
+        
+        <form>
+            <p><input type="text" /></p>
+            <p><input type="text" /></p>
+            
+            <button (click)="click_button()">Go</button>
+        </form>
+    </div>
 </div>
