--- a/frontend/app/main/footer/footer.component.scss
+++ b/frontend/app/main/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .main-footer {
     position: relative;
 
-    height : 100%;
+    // height : 100%;
     padding : 8px;
     
     background-color: #ce9393;
