--- a/frontend/app/main/navigation/navigation.component.scss
+++ b/frontend/app/main/navigation/navigation.component.scss
@@ -12,7 +12,7 @@
     border-right: 1px solid #8f8f8f;
     box-shadow: 1px 0px 5px 0px #808080;
 
-    position: absolute;
+    position: fixed;
     overflow: hidden;
     z-index: $navigation-z-index;
 
