--- a/frontend/app/start-page/start-page.component.scss
+++ b/frontend/app/start-page/start-page.component.scss
@@ -9,3 +9,10 @@ $page-z-index: 9999;
 
     background-color: #ffffff;
 }
+
+.login{
+    width:100%;
+    height:100%;
+
+    background-color: #dddddd;
+}
