add merchant 추가

--- a/frontend/app/app.component.html
+++ b/frontend/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- Splash -->
-<app-start-page *ngIf="show_splash" (onoff)="change_splash($event)"></app-start-page>
+<!-- <app-login *ngIf="show_splash" (onoff)="change_splash($event)"></app-login> -->
 <!-- main -->
 <app-main></app-main>
