--- a/frontend/app/main/main/main.component.scss
+++ b/frontend/app/main/main/main.component.scss
@@ -28,7 +28,7 @@ $navigation-z-index : $header-z-index  - 1;
         min-height : 90%;
         padding : 8px;
         
-        background-color: #f3f3f3;
+        background-color: #ffffff;
 
 
     }
