--- a/frontend/app/main/register-merchant/register-merchant.component.html
+++ b/frontend/app/main/register-merchant/register-merchant.component.html
@@ -1,11 +1,22 @@
-<h1>Add Merchant</h1>
 
-<p>
-    <input type="text" placeholder="name" />
-</p>
-<p>
-    <input type="text" placeholder="merchant no" />
-</p>
-<p>
-    <input type="text" placeholder="phone no" />
-</p>
+
+<div class="frame">
+    <h1>Add Merchant</h1>
+    <div class="addmer">
+        <form>
+            <label><i class="fas fa-signature"></i> NAME</label>
+            <p>
+                <input type="text" placeholder="name" />
+            </p>
+            <label><i class="fas fa-store"></i> MERCHANT NUMBER</label>
+            <p>
+                <input type="text" placeholder="merchant no" />
+            </p>
+            <label><i class="fas fa-phone"></i> PHONE NUMBER</label>
+            <p>
+                <input type="text" placeholder="phone no" />
+            </p>
+            <button type="submit">Add</button>
+        </form>
+    </div>
+</div>
