--- a/frontend/app/main/body/body.component.html
+++ b/frontend/app/main/body/body.component.html
@@ -1,1 +1,7 @@
-<p stype="border:1px solid #FFF;">home works!</p>
+<div class="back-image">
+    <div>
+        <h1>home works!</h1>
+    </div>
+
+
+</div>
