--- a/frontend/app/main/header/header.component.scss
+++ b/frontend/app/main/header/header.component.scss
@@ -13,3 +13,9 @@
     border-bottom: 1px solid #8f8f8f;
     box-shadow: 0px 1px 5px 0px #808080;
 }
+
+h1 {
+    margin: 8px 8px;
+    font-size: 1.4em;
+    font-weight: 550;
+}
