--- a/frontend/app/main/navigation/navigation.component.html
+++ b/frontend/app/main/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 
 <div class="main-navigation">
-    <h3>Nav</h3>
+    <h3><i class="fas fa-angle-double-down"></i> MENU</h3>
     <ul>
         <li><a [routerLink]="['/home']" routerLinkActive="router-link-active" ><span><i class="fas fa-home"></i> Home</span></a></li>
         <li><a [routerLink]="['/reg-merchant']" routerLinkActive="router-link-active" ><span><i class="fas fa-store"></i> Add Merchant</span></a></li>
