입력받은 문자열을 가지고 qr code 생성하는 것 완료

--- a/frontend/app/main/navigation/navigation.component.html
+++ b/frontend/app/main/navigation/navigation.component.html
@@ -4,6 +4,8 @@
     <ul>
         <li><a [routerLink]="['/home']" routerLinkActive="router-link-active" ><span><i class="fas fa-home"></i> Home</span></a></li>
         <li><a [routerLink]="['/reg-merchant']" routerLinkActive="router-link-active" ><span><i class="fas fa-store"></i> Add Merchant</span></a></li>
+        
+        <li><a [routerLink]="['/qr']" routerLinkActive="router-link-active" ><span><i class="fas fa-qrcode"></i> QR code gen</span></a></li>
     </ul>
     
     
