barcode도 추가하긴 했는데, crash 난다...

--- a/frontend/app/main/qr/qr.component.html
+++ b/frontend/app/main/qr/qr.component.html
@@ -9,8 +9,10 @@
             <!-- <input ([ngModel])="qr_input"> -->
         </p>
         <p>
-            <button (click)="get_qrcode()">create</button>
+            <button (click)="get_qrcode()">create QRcode</button>
+            <button (click)="get_barcode()">create Barcode</button>
         </p>
     </form>
     <p><img [src]="qr_data"></p>
+    <p><img [src]="barcode_data"></p>
 </div>
