--- a/frontend/app/main/qr/qr.component.scss
+++ b/frontend/app/main/qr/qr.component.scss
@@ -4,4 +4,17 @@
     label{
         font-weight: 600;
     }
+    button {
+        padding: 8px;
+
+        font-size: 1.2em;
+
+        border:none;
+    }
+    button:hover{
+        background-color: #dddddd;
+    }
+    .danger{
+        color:red;
+    }
 }
