--- a/frontend/app/main/transactions/transactions.component.html
+++ b/frontend/app/main/transactions/transactions.component.html
@@ -1,91 +1,73 @@
-<p>transactions works!</p>
+<div style="margin:32px;"></div>
 
-<table class="selected-table">
-    <div *ngIf="selected_transaction">
-        <tr>
-            <td rowspan="12"><i class="fas fa-genderless"></i></td>
-            <td><label>type</label> </td>
-            <td>{{selected_transaction.type}}</td>
-        </tr>
-        <tr>
-            <td><label>Class</label></td>
-            <td>{{selected_transaction.class}}</td>
-        </tr>
-        <tr>
-            <td><label>merchant</label></td>
-            <td>{{selected_transaction.merchant}}</td>
-        </tr>
-        <tr>
-            <td><label>point</label></td>
-            <td>{{selected_transaction.point}}</td>
-        </tr>
-        <tr>
-            <td><label>curr</label></td>
-            <td>{{selected_transaction.curr}}</td>
-        </tr>
-        <tr>
-            <td><label>country</label></td>
-            <td>{{selected_transaction.country}}</td>
-        </tr>
-        <tr>
-            <td><label>date</label></td>
-            <td>{{selected_transaction.date}}</td>
-        </tr>
-        <tr>
-            <td><label>description</label></td>
-            <td>{{selected_transaction.description}}</td>
-        </tr>
-        <tr>
-            <td><label>description</label></td>
-            <td>{{selected_transaction.date}}</td>
-        </tr>
-        <tr>
-            <td><label>taxfree</label></td>
-            <td>{{selected_transaction.taxfree}}</td>
-        </tr>
-        <tr>
-            <td><label>utu</label></td>
-            <td>{{selected_transaction.utu}}</td>
-        </tr>
-        <tr>
-            <td><label>save_point</label></td>
-            <td>{{selected_transaction.save_point}}</td>
-        </tr>
+<div class="frame">
+    <div *ngIf="selected_transaction" class="selected-table">
+        <div style="display: grid; grid-template-columns: 50% 50%; grid-auto-flow: row;">
+            <div class="item" style="grid-row:1; grid-column: 1 / 3; margin-bottom: 16px;">
+                <p><label>가맹점명</label></p>
+                <p style="font-size: 1.1em; font-weight: 600;">{{selected_transaction.merchant}}</p>
+            </div>
+            <div class="item">
+                <p><label>분류</label></p>
+                <p>{{selected_transaction.class}}</p>
+            </div>
+            <div class="item">
+                <p><label>설명</label></p>
+                <p>{{selected_transaction.description}}</p>
+            </div>
+            <div class="item">
+                <p><label>포인트</label></p>
+                <p [ngClass]="selected_transaction.point < 0 ? 'negative' : 'positive'"
+                    style="font-size: 1.1em; font-weight: 600;">
+                    {{selected_transaction.point}} P
+                </p>
+                <p [ngClass]="selected_transaction.point < 0 ? 'negative' : 'positive'">
+                    {{selected_transaction.curr}} THB
+                </p>
+            </div>
+            <div class="item">
+                <p><label>적립금</label></p>
+                <p style="color:green;">+{{selected_transaction.save_point}} P</p>
+            </div>
+            <div class="item">
+                <p><label>날짜</label></p>
+                <p>{{selected_transaction.date}}</p>
+            </div>
+            <div class="item">
+                <p><label>국가</label></p>
+                <p>{{selected_transaction.country}}</p>
+            </div>
+            <div class="item">
+                <p><label>Taxfree 유무</label></p>
+                <p>{{selected_transaction.taxfree}}</p>
+            </div>
+            <div class="item">
+                <p><label>UTU 유무</label></p>
+                <p>{{selected_transaction.utu}}</p>
+            </div>
+        </div>
     </div>
-</table>
 
 
-<div class="list">
-    <table class="list-table">
-        <thead calss="header">
-            <th><label>-</label></th>
-            <th><label>type</label></th>
-            <th><label>Class</label></th>
-            <th><label>merchant</label></th>
-            <th><label>point</label></th>
-            <th><label>curr</label></th>
-            <th><label>country</label></th>
-            <th><label>date</label></th>
-            <th><label>description</label></th>
-            <th><label>taxfree</label></th>
-            <th><label>utu</label></th>
-            <th><label>save_point</label></th>
-        </thead>
-        <tbody>
-            <tr *ngFor="let tr of transactions; let index = index;" class="item" (click)="onClickItem($event, index)">
-                <td><i class="fas fa-genderless"></i></td>
-                <td>{{tr.type}}</td>
-                <td>{{tr.class}}</td>
-                <td>{{tr.merchant}}</td>
-                <td>{{tr.point}}</td>
-                <td>{{tr.curr}}</td>
-                <td>{{tr.country}}</td>
-                <td>{{tr.date | date:'yyyy년 MM월 dd일'}}</td>
-                <td>{{tr.description}}</td>
-                <td>{{tr.taxfree}}</td>
-                <td>{{tr.utu}}</td>
-                <td>{{tr.save_point}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="list">
+        <div *ngFor="let tr of transactions; let index = index;" class="item" (click)="onClickItem($event, index)">
+            <!-- <div style="display: grid;"> -->
+            <div>
+                <p><label class="merchant">{{tr.merchant}}</label></p>
+                <p class="date">{{tr.date  | date:'yyyy년 MM월 dd일 HH시 mm분'}}</p>
+                <p>
+                    {{tr.description}}
+                    <span *ngIf="tr.taxfree" class="taxfree">TaxFree</span>
+                    <span *ngIf="tr.utu" class="utu">UTU</span>
+                </p>
+            </div>
+            <div style="display: flex; flex-direction: column; align-items: flex-end;">
+                <p [ngClass]="tr.point < 0 ? 'negative' : 'positive'" 
+                    style="font-size:1.3em; font-weight: 550;">
+                    {{tr.point}} P</p>
+                <p [ngClass]="tr.point < 0 ? 'negative' : 'positive'">{{tr.curr}} THB</p>
+                <p style="color:green;">+{{tr.save_point}} P</p>
+            </div>
+        </div>
+    </div>
 </div>
