--- a/frontend/app/main/header/header.component.html
+++ b/frontend/app/main/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="main-header">
-    <h1><i class="fas fa-crow"></i> Some Project of Point</h1>
+    <h1><i class="fas fa-crow"></i> KLOOKPay</h1>
 </div>
