--- a/frontend/app/main/main/main.component.html
+++ b/frontend/app/main/main/main.component.html
@@ -9,8 +9,8 @@
     </div>
 
     <!-- footer -->
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
 
 <!-- navigation -->
-<app-navigation></app-navigation>
+<!-- <app-navigation></app-navigation> -->
