분류 이미지도 띄워주도록 수정

--- a/frontend/app/main/header/header.component.html
+++ b/frontend/app/main/header/header.component.html
@@ -1,3 +1,9 @@
 <div class="main-header">
-    <h1><i class="fas fa-crow"></i> KLOOKPay</h1>
+    <div style="display: flex; justify-content: center; padding-top: 8px;">
+        <img src="assets/images/logo.png" style="height: 48px;">
+    </div>
+    <!-- <h1 style="display: inline-block;">
+        <i class="fas fa-crow"></i> 
+        KLOOKPay
+    </h1> -->
 </div>
