--- a/frontend/app/main/transactions/transactions.component.scss
+++ b/frontend/app/main/transactions/transactions.component.scss
@@ -33,12 +33,17 @@ $maxwidth:720px;
         .item{
             // margin: 16px 0;
             padding:16px;
+
+            display: grid;
+            grid-auto-flow: column;
+            grid-template-columns: auto 90%;
     
-            display: flex; 
-            flex-direction: row ; 
-            justify-content: space-between; 
-            align-items: flex-start;
-    
+            &-flex{
+                display: flex; 
+                flex-direction: row ; 
+                justify-content: space-between; 
+                // align-items: flex-start;
+            }
             .merchant{
                 font-size:1.3em;
                 font-weight: 500;
