스타일 좀 변경

--- a/frontend/app/main/header/header.component.html
+++ b/frontend/app/main/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="main-header">
     <div style="display: flex; justify-content: center; padding-top: 8px;">
-        <img src="assets/images/logo.png" style="height: 48px;">
+        <img src="assets/images/logo.png" style="height: 36px; margin-top:8px;">
     </div>
     <!-- <h1 style="display: inline-block;">
         <i class="fas fa-crow"></i> 
