--- a/frontend/app/main/transactions/transactions.component.html
+++ b/frontend/app/main/transactions/transactions.component.html
@@ -53,7 +53,7 @@
         <div *ngFor="let tr of transactions; let index = index;" class="item" (click)="onClickItem($event, index)">
             <!-- <div style="display: grid;"> -->
             <div>
-                <img src="{{icons[tr.class]}}" style="height:36px; margin-top: 8px;">
+                <img src="{{icons[tr.class]}}" style="height:36px; margin-top: 8px; margin-left: 16px;">
             </div>
             <div class="item-flex">
                 <div>
