--- a/frontend/app/main/transactions/transactions.component.html
+++ b/frontend/app/main/transactions/transactions.component.html
@@ -1,8 +1,6 @@
-<div style="margin:32px;"></div>
-
 <div class="frame" #frame>
     <div *ngIf="selected_transaction" class="selected-table">
-        <div style="display: grid; grid-template-columns: 50% 50%; grid-auto-flow: row;">
+        <div class="selected-info">
             <div class="item" style="grid-row:1; grid-column: 1 / 3; margin-bottom: 16px;">
                 <p><label>가맹점명</label></p>
                 <p style="font-size: 1.4em; font-weight: 500;">{{selected_transaction.merchant}}</p>
@@ -47,6 +45,10 @@
                 <p>{{selected_transaction.utu}}</p>
             </div>
         </div>
+        <div class="buttons">
+            <div class="btn">로그아웃</div>
+            <div class="btn" (click)="onClickReset($event)">초기화</div>
+        </div>
     </div>
 
     <div class="list">
@@ -57,7 +59,7 @@
             </div>
             <div class="item-flex">
                 <div>
-                    <p><label class="merchant">{{tr.merchant}}</label></p>
+                    <p><label class="merchant" style="text-overflow: ellipsis; word-wrap: normal;">{{tr.merchant}}</label></p>
                     <p class="date">{{tr.date  | date:'yyyy년 MM월 dd일 HH시 mm분'}}</p>
                     <p>
                         {{tr.description}}
@@ -73,5 +75,13 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="modal" [ngClass]="{'modal-show' : !isModalShow}">
+    <div class="modal-frame" (click)="onClickModalBlur()"></div>
+    <div class="modal-content">
+        <div class="str">{{message}}</div>
+        <div class="confirm" (click)="onClickModalConfirm()">확인</div>
     </div>
 </div>
