--- a/frontend/app/main/transactions/transactions.component.scss
+++ b/frontend/app/main/transactions/transactions.component.scss
@@ -22,28 +22,62 @@ $detail-width:480px;
         height:100%;
 
         position: fixed;
-        top:$header-height ;
+        // top:$header-height ;
         left:0px;
 
         p{margin:0;}
+
+        .selected-info{
+            display: grid; 
+            grid-template-columns: 50% 50%; 
+            grid-auto-flow: row;
     
-        label{
-            padding:2px;
-    
-            font-size: 1.1em;
-            font-weight: 550;
-    
-            // border: 1px solid #194d19;
-            // border-radius: 2px;
+            label{
+                padding:2px;
+        
+                font-size: 1.1em;
+                font-weight: 550;
+        
+                // border: 1px solid #194d19;
+                // border-radius: 2px;
+            }
+            .item{
+                margin:8px 0;
+            }
         }
-        .item{
-            margin:8px 0;
-        }
+        .buttons{
+            position: absolute;
+            bottom:160px;
+            left:16px;
+            width:$detail-width;
+            padding:8px;
+
+           display: grid;
+           grid-auto-flow: column;
+           column-gap: 16px; 
+    
+           .btn{
+               cursor: pointer;
+               font-size: 1.2em;
+               text-align: center;
+                background-color: #ff5722;
+                color:white;
+                border-radius: 4px;
+               
+                padding:8px 16px;
+
+                &:hover{
+                    transition: 200ms;
+                    background-color: #d6481c;
+                    box-shadow: 0px 2px 4px 2px rgba(136, 136, 136, 0.315)
+                }         
+           }
+        }    
     }
-    
     
     .list{
         margin-left: $detail-width + 120px;
+        min-width: 640px;
         p{
             margin:0;
         }
@@ -96,6 +130,71 @@ $detail-width:480px;
     }
 }
 
+.modal{
+    position: fixed;
+    top:0;
+    left:0;
+    z-index: 10;
+
+    width:100%;
+    height:100%;
+
+    display: grid;
+    align-items: center;
+    justify-items: center;
+
+    &-show{
+        left:3000px;
+    }
+
+    .modal-frame{
+        position: fixed;
+
+        width:100%;
+        height:100%;
+        background-color: rgba(136, 136, 136, 0.486);
+    }
+    .modal-content{
+        z-index: 11;
+        background-color: white;
+        border-radius: 4px;
+        padding:32px;
+
+        width:360px;
+        // height:240px;
+
+        display: grid;
+
+        .str{
+            font-size: 1.1em;
+            font-weight: 600;
+        }
+        .confirm{
+            // justify-self:end;
+            align-self:end;
+
+            margin-top: 16px;
+
+            color:white;
+            font-size: 1.2em;
+            background-color: #ff5722;
+            padding:8px;
+            border-radius: 4px;
+            text-align: center;
+            
+            &:hover{
+                transition: 200ms;
+                background-color: #ff6c40;
+                box-shadow: 0px 2px 4px 2px rgba(136, 136, 136, 0.315)
+            }
+            &:active{
+                transition: 100ms;
+                background-color: #d6481c;
+                box-shadow: 0px 2px 4px 2px rgba(136, 136, 136, 0.315)
+            }
+        }
+    }
+}
 
 
 
