초기화 시 transactions 리로드

--- a/frontend/app/main/transactions/transactions.component.scss
+++ b/frontend/app/main/transactions/transactions.component.scss
@@ -78,6 +78,7 @@ $detail-width:480px;
     .list{
         margin-left: $detail-width + 120px;
         min-width: 640px;
+        padding-top: 32px; 
         p{
             margin:0;
         }
